# sign-language-interpretation

./: .gitattributes  .gitignore  .python-version  Interface.py  Yakov_testing.ipynb  Yuelian_Transfer_learning.ipynb  Yuelian_Transfer_learning_landmark_images.ipynb  Yuelian_Transfer_learning_large_images.ipynb  Yuelian_Transfer_learning_new_data.ipynb  affable-ring-388511-6c9edf865d96.json  app.py  aslr.py  demo.py  demo_app.py  jfzhang_new_data_model50x50_local.ipynb  pyproject.toml  requirements.txt  streamlit_apply.py  turn.py  webcam_pred.py  webcam_pred_ResNet50_100.py  webcam_pred_ResNet50_100_buffer.py  webcam_pred_vgg16_100.py  webcam_pred_vgg16_100_buffer.py  webcam_train.py  webcamera_app.py
.streamlit/: secrets.toml
Model/: labels.txt  model_1.h5:Zone.Identifier  model_resnet50_100_landmark.keras
cnn_model/new_data_cnn_model50x50_01/: fingerprint.pb  keras_metadata.pb  saved_model.pb
cnn_model/new_data_cnn_model50x50_01/variables/: variables.index
notebooks/: AK_test.ipynb
pages/: 1_Live_demo.py  3_AutoModel.py  Demo.py  Words_generator.py
pages_deployed/: Demo.py
pages_local/: 2_Words_generation.py
tests/: test_full.py  test_script.py  test_script_1.py  test_script_2.py  test_script_3.py  test_script_4.py
